- Fix the alignment issue on cart summary view

--- a/public/styles/CartDetail.sass
+++ b/public/styles/CartDetail.sass
@@ -40,7 +40,6 @@
 			.cart-item	
 				padding: 0
 				margin-top: 10px
-				height: 130px
 
 				&:not(:last-child)
 					border-bottom: 2px dashed lightgray
@@ -59,7 +58,7 @@
 					padding-top: 0px
 					// float: left
 					display: block
-					margin-left: 70px
+					margin-left: 90px
 					
 
 					.design-title, .product-title
